fix: academic & tutors - content overflow on mobile device

--- a/components/tutors/styles.scss
+++ b/components/tutors/styles.scss
@@ -13,10 +13,18 @@
         }
 
         .tutor-list {
-            margin-top: 40px;
             display: flex;
-            margin-left: 70px;
+            padding: 16px;
+            width: 100%;
+            overflow: auto;
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+            margin-top: 40px;
             gap: 24px;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
 
             .item {
                 box-shadow: 0px 2px 12px 0px #02342E1F;
@@ -24,6 +32,52 @@
                 border-radius: 22px;
                 padding: 40px 50px;
                 max-width: fit-content;
+            }
+        }
+    }
+}
+
+// X-Small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// // Small devices (landscape phones, 576px and up)
+// @media (min-width: 576px) { ... }
+
+// // Medium devices (tablets, 768px and up)
+// @media (min-width: 768px) { ... }
+
+// // Large devices (desktops, 992px and up)
+// @media (min-width: 992px) { ... }
+
+// X-Large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .tutors {
+        padding: 75px 0;
+
+        .tutor-content {
+            h1 {
+                font-family: 'Poppins', sans-serif;
+                font-weight: 500;
+                font-size: 32px;
+                line-height: 36px;
+                letter-spacing: 0%;
+                text-align: center;
+                color: #02342E;
+            }
+
+            .tutor-list {
+                margin-top: 40px;
+                display: flex;
+                margin-left: 70px;
+                gap: 24px;
+
+                .item {
+                    box-shadow: 0px 2px 12px 0px #02342E1F;
+                    background-color: #fff;
+                    border-radius: 22px;
+                    padding: 40px 50px;
+                    max-width: fit-content;
+                }
             }
         }
     }
